--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,7 +70,13 @@ a {
 .whiteText a:hover {    text-decoration: underline;}
 
 
+h2 {
+    color: #888;
+    font-weight: 200;
+    font-size: 40px;
+    line-height: 54px;
 
+}
 h4 {
     font-weight: 500;
     color: #ff6c22;
