--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -217,3 +217,13 @@ section {
 }
 
 
+@media only screen and (min-width: 320px) and (max-width: 800px) {
+    #logo {
+        width: 500px;
+        height: 223px;
+        top:0;
+        left:0;
+        background-image: url('/img/2015_banner_logo_small.png') ;
+        background-size: 100% auto;
+    }
+}
