--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -87,7 +87,7 @@ html, body {
 }
 
 .image:nth-of-type(3) {
-    background: url('/img/_bg_kalaheo_3.jpg') no-repeat center center;
+    background: url('/img/_bg_kalaheo_8.jpg') no-repeat center center;
     background-size: cover;
 }
 
@@ -110,6 +110,12 @@ html, body {
     background: url('/img/_bg_kalaheo_6.jpg') no-repeat center center;
     background-size: cover;
 }
+
+.image:nth-of-type(8) {
+    background: url('/img/_bg_kalaheo_3.jpg') no-repeat center center;
+    background-size: cover;
+}
+
 
 
 section {
